--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ thiserror = "2.0.14"
 polars-arrow = "0.45.1"
 rustc-hash = "2.1.1"
 smallvec = "1.15.1"
+once_cell = "1.19.0"
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
