--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ rustc-hash = "2.1.1"
 smallvec = "1.15.1"
 once_cell = "1.19.0"
 tempfile = "3.20.0"
+chrono = { version = "0.4.39", default-features = true, features = ["clock"] }
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
