build(Cargo.toml): disable debug info to reduce binary size
Remove debug information from the release build configuration to optimize
binary size and improve performance. This change sets the debug flag to
false in the Cargo.toml file's profile.release section.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ opt-level = 3
 # lto = "thin"
 lto = "fat"
 codegen-units = 1
-debug = true     # Remove debug info
+debug = false     # Remove debug info
 panic = "unwind"   # Smaller binary, slightly faster
 
 [lib]
